--- a/Practice/HW4/css/style.css
+++ b/Practice/HW4/css/style.css
@@ -1,29 +1,30 @@
 body {
     min-height: 1060px;
     background: url("../img/bg.png") repeat-x;
-}
-
-.txt {
     font-family: Tahoma;
     font-size: 12px;
-    color: #128aa7;
 }
 
 .wraper {
     position: relative;
     margin: 0 auto;
     margin-top: 38px;
+    /*margin-bottom: 30px;*/
     width: 1000px;
     min-height: 990px;
     background:#ffffff;
+    -webkit-box-shadow: 0px 4px 5px 1px rgba(3,29,40,1);
+    -moz-box-shadow: 0px 4px 5px 1px rgba(3,29,40,1);
+    box-shadow: 0px 4px 5px 1px rgba(3,29,40,1);
 }
 
 /*HEADER*/
 .header {
    height: 175px;
+    color: #128aa7;
 }
 
-.header:after {
+.clearfix:after {
     content: "";
     display: block;
     clear: both;
@@ -38,7 +39,6 @@ body {
 .contact_us {
     margin-bottom: 5px;
     font-weight: bold;
-
 }
 
 .contact_info {
@@ -62,51 +62,56 @@ body {
     font-size: 10px;
 }
 
-.country_flag {
+.country {
     position: relative;
-    float: right;
-    margin-right: 17px;
     display: block;
-    width: 41px;
-    height: 42px;
+    float: right;
+    margin-right: 15px;
 }
 
-.country_flag:first-child {
+.country_flag {
+    display: block;
+    width: 42px;
+    height: 10px;
+    margin: 0 auto;
+    padding-top: 45px;
+    text-decoration: underline;
+    font-size: 10px;
+    color: #128aa7;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.country:first-child {
     margin-right: 0;
 }
 
 .India {
-    background: url("../img/countries.png") no-repeat -1px;
+    background: url("../img/countries.png") no-repeat 0 0;
 }
 
 .Nepal {
-    background: url("../img/countries.png") no-repeat -59px;
+    background: url("../img/countries.png") no-repeat -58px 0;
 }
 
 .Tibet {
-    background:url("../img/countries.png") no-repeat -115px;
+    background:url("../img/countries.png") no-repeat -114px 0;
 }
 
 .Bhutan {
-    background:url("../img/countries.png") no-repeat -170px;
+    background:url("../img/countries.png") no-repeat -169px 0;
+    margin-right: 4px;
 }
 
 .Sri_Lanka {
-    background:url("../img/countries.png") no-repeat -226px;
-}
+    background:url("../img/countries.png") no-repeat -220px 0;
+    width: 53px;
+
+
+   }
 
 .Maldives {
-    background:url("../img/countries.png") no-repeat -283px;
-}
-
-.country_name {
-    position: absolute;
-    top: 45px;
-    display: block;
-    width: 41px;
-    text-decoration: underline;
-    font-size: 10px;
-    text-align: center;
+    background:url("../img/countries.png") no-repeat -282px 0;
 }
 
 .photo {
@@ -116,13 +121,105 @@ body {
     border-bottom: 1px solid #128aa7;
 }
 
+/*MAIN MENU*/
+
+.main_menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 1px solid #cacbcb;
+    border-bottom: 1px solid #000;
+    height: 28px;
+    background: url("../img/main_menu_bg.png");
+    box-shadow: 0px 2px 1px grey;
+}
+
+.main_menu>li {
+    position: relative;
+}
+
+.menu_name{
+    position: relative;
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    font-family: Tahoma;
+}
+
+.down {
+    padding-right: 10px;
+    background: url("../img/main_menu_triangle.png") no-repeat 100% 60%;
+}
+
+.submenu {
+    display: none;
+    position: absolute;
+    top: 22px;
+    left: -10px;
+    width: 150px;
+    padding-bottom:  5px;
+    background: #303030;
+    -webkit-box-shadow: 0px 4px 5px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 4px 5px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 4px 5px 2px rgba(0,0,0,0.75);
+}
+.submenu_name {
+    display: block;
+    padding: 5px 0 5px 10px;
+}
+
+ul.main_menu > li:hover > ul.submenu {
+    display: block;
+}
+
+/*CENTRAL PART*/
+
+.central {
+    width: 1000px;
+    min-height: 575px;
+    background: url("../img/central_bg.png") repeat-y;
+}
+
+.column {
+    box-sizing: border-box;
+    width: 210px;
+    padding: 0 25px 0 15px;
+    font-size: 14px;
+    line-height: 24px;
+    color: #424c43;
+}
+
+.left_column {
+    float: left;
+}
+
+.right_column {
+    float: right;
+}
+
+.center_column {
+    box-sizing: border-box;
+    width: 580px;
+    margin-left: 210px;
+    padding: 10px;
+    line-height: 20px;
+}
+
+.title {
+    display: table;
+    font-size: 18px;
+    margin: 16px auto;
+}
+
+
+
+
 /*COPYRIGHT*/
 .copyright {
-    position: absolute;
+   /* position: absolute;
     left: 400px;
-    bottom: 30px;
-    width: 173px;
-    margin: 0 auto;
-    font-size: 11px;
+    bottom: 30px;*/
+    width: 210px;
+    margin: 10px auto;
     color: #ffffff;
 }
