--- a/Practice/HW6/css/style.css
+++ b/Practice/HW6/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .info {
-    margin-top: 18px;
+    margin-top: 19px;
 }
 
 .clearfix:after {
@@ -45,11 +45,11 @@ body {
     float: left;
     box-sizing: border-box;
     margin-left: 16px;
-    margin-top: -4px;
+    margin-top: -3px;
     padding-left: 267px;
     width: 495px;
     height: 25px;
-    background: url("../img/header_enter.png") no-repeat 7px 4px, linear-gradient(#1f6787, #0c3357);
+    background: url("../img/header_avtoriz.png") no-repeat 7px 4px, linear-gradient(#1f6787, #0c3357);
     border-radius: 3px;
     -webkit-box-shadow: 2px 3px 7px 0px rgba(89,109,128,1);
     -moz-box-shadow: 2px 3px 7px 0px rgba(89,109,128,1);
@@ -105,6 +105,7 @@ body {
 
 .navi {
     float: right;
+    margin-top: -3px;
     margin-right: 6px;
     width: 75px;
     height: 19px;
@@ -115,7 +116,15 @@ body {
 .home {
     width: 18px;
     height: 12px;
-    margin-left: 5px;
+    margin-left: 7px;
+}
+
+.map {
+    margin-left: -2px;
+}
+
+.email {
+    margin-left: -1px;
 }
 
 .logo {
