--- a/Practice/HW6/css/style.css
+++ b/Practice/HW6/css/style.css
@@ -21,14 +21,14 @@ body {
     margin-top: 1px;
     margin-left: 7px;
     height: 21px;
-    width: 22px;
+    width: 21px;
     border-radius: 50%;
     background: url("../img/phone.png") no-repeat 5px, linear-gradient(#0c3357, #1f6786);
 }
 
 .phone_numbers {
     float: left;
-    margin-left: 3px;
+    margin-left: 4px;
     font-family: Arial, sans-serif;
     font-size: 18px;
     line-height: 25px;
@@ -55,9 +55,9 @@ body {
     color:#ffffff;
 }
 
-.field {
+.avtoriz_field {
     position: absolute;
-    top: 4px;
+    top: 3px;
     padding-left: 5px;
     width: 109px;
     height: 15px;
@@ -67,10 +67,10 @@ body {
     font-size: 11px;
 }
 
-.field::-webkit-input-placeholder {color:#97a2a6;}
-.field::-moz-placeholder          {color:#97a2a6;}/* Firefox 19+ */
-.field:-moz-placeholder           {color:#97a2a6;}/* Firefox 18- */
-.field:-ms-input-placeholder      {color:#97a2a6;}
+.avtoriz_field::-webkit-input-placeholder {color:#97a2a6;}
+.avtoriz_field::-moz-placeholder          {color:#97a2a6;}/* Firefox 19+ */
+.avtoriz_field:-moz-placeholder           {color:#97a2a6;}/* Firefox 18- */
+.avtoriz_field:-ms-input-placeholder      {color:#97a2a6;}
 
 .login_field {
     left: 24px;
@@ -92,6 +92,7 @@ body {
     display: inline-block;
     margin-left: 17px;
     padding-bottom: 2px;
+    height: 10px;
     border-bottom: 0.5px solid #bfbfbf;
     color: #bfbfbf;
     text-decoration: none;
@@ -136,7 +137,7 @@ body {
     width: 911px;
     height: 35px;
     border: 1px solid rgb(13, 22, 66);
-    border-radius: 5px;
+    border-radius: 4px;
     background: -moz-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(44,48,52) 87%, rgb(87,96,104) 100%);
     background: -webkit-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(44,48,52) 87%, rgb(87,96,104) 100%);
     background: -ms-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(44,48,52) 87%, rgb(87,96,104) 100%);
@@ -144,7 +145,7 @@ body {
 }
 
 .main_menu {
-    margin-top: 5px;
+    margin-top: 4px;
     margin-left: 125px;
     height: 25px;
 }
@@ -227,4 +228,118 @@ body {
 
 .sum_text {
     margin-right: 7px;
+}
+
+/*SEARCH*/
+.search {
+    margin: 10px 4px;
+}
+        /*базовый стиль для блоков поиска*/
+.find_box {
+    position: relative;
+    border: 1px solid  rgb(156, 156, 157);
+    box-shadow: 0px 5px 5px 0px rgba(150, 150, 150, 0.75);
+    background-color: rgb(255, 255, 255);
+}
+
+        /*базовый стиль для навзаний блоков поиска*/
+.name {
+    position: absolute;
+    font-family: "Arial Black";
+    font-size: 12px;
+    color: #154467;
+}
+
+        /*базовый стиль для ссылки "поиск"*/
+.search_txt {
+    position: absolute;
+    bottom: 8px;
+    right: 19px;
+    border-bottom: 1.5px solid #154467;
+    color: #154467;
+    font-family: Arial, sans-serif;
+    font-style: italic;
+    font-size: 14px;
+    text-decoration: none;
+    letter-spacing: 0.025em;
+    height: 15px;
+
+}
+
+ /*Поис по автомобилю*/
+.findPoAvto {
+    margin-top: 1px;
+    float: left;
+    width: 413px;
+    height: 132px;
+    border-radius: 17px;
+    box-shadow: 0px 5px 5px 0px rgba(104, 104, 104, 0.75);
+
+}
+
+.name-findPoAvto {
+    top: 1px;
+    left: 125px;
+    letter-spacing: 0.024em;
+}
+
+.findPoAvto_discs,
+.findPoAvto_tires {
+    font-size: 10px;
+}
+
+.findPoAvto_discs {
+    position: absolute;
+    top: 4px;
+    left: 20px;
+}
+
+.findPoAvto_tires {
+    position: absolute;
+    top: 2px;
+    right: 21px;
+}
+
+/*Поиск шин*/
+
+.findTires {
+    float: left;
+    margin-left: 14px;
+    width: 191px;
+    height: 134px;
+    border-radius: 18px;
+    letter-spacing: 0.026em;
+}
+
+.name-findTires {
+    top: 3px;
+    left: 9px;
+    letter-spacing: -0.001em;
+}
+
+.search_txt-tires {
+    bottom: 9px;
+    right: 17px;
+}
+
+
+/*Поиск дисков*/
+.findDiscs{
+    float: left;
+    margin-left: 10px;
+    width: 266px;
+    height: 133px;
+    border-radius: 16px;
+}
+
+.name-findDiscs {
+    top: 2px;
+    left: 8px;
+    font-size: 13px;
+    letter-spacing: 0.022em;
+}
+
+.search_txt-discs {
+    bottom: 8px;
+    right: 18px;
 }
