--- a/Practice/HW6/css/style.css
+++ b/Practice/HW6/css/style.css
@@ -255,7 +255,7 @@ body {
     position: absolute;
     bottom: 8px;
     right: 19px;
-    border-bottom: 1.5px solid #154467;
+    border-bottom: 1px solid #154467;
     color: #154467;
     font-family: Arial, sans-serif;
     font-style: italic;
@@ -274,13 +274,12 @@ body {
     height: 132px;
     border-radius: 17px;
     box-shadow: 0px 5px 5px 0px rgba(104, 104, 104, 0.75);
-
 }
 
 .name-findPoAvto {
     top: 1px;
     left: 125px;
-    letter-spacing: 0.024em;
+    letter-spacing: 0.027em;
 }
 
 .findPoAvto_discs,
@@ -292,13 +291,91 @@ body {
     position: absolute;
     top: 4px;
     left: 20px;
+    letter-spacing: 0.025em
 }
 
 .findPoAvto_tires {
     position: absolute;
     top: 2px;
-    right: 21px;
+    right: 20px;
+    letter-spacing: 0.025em
 }
+
+
+.findPoAvto .search_options {
+    position: absolute;
+    top: 15px;
+}
+
+.name_option {
+    font-family: Arial, sans-serif;
+    font-size: 10px;
+}
+
+.sub-name_option {
+    font-family: Arial, sans-serif;
+    font-size: 10px;
+    color: #77858b;
+    letter-spacing: -0.07em;
+}
+
+.name_option-marka {
+    letter-spacing: 0.03em;
+}
+
+.sub-name_option-marka {
+    letter-spacing: -0.07em;
+}
+
+ /*параметры поиска Диски*/
+.discs{
+    margin-top: 5px;
+    margin-left: 17px;
+    width: 200px;
+}
+
+form dt {
+    float: left;
+    clear: both;
+    width: 66px;
+    text-align: left;
+    margin-right: 10px;
+    position: relative;
+    top: 1px;
+}
+form dd {
+    margin-bottom: 1px;
+
+}
+
+form dd select {
+    height: 17px;
+    width: 102px;
+    padding: 3px;
+    box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, 0.75);
+}
+
+.option_model {
+    float: left;
+    clear: both;
+    width: 66px;
+    text-align: left;
+    margin-right: 10px;
+    position: relative;
+    top: -4px;
+}
+
+.name_option-model {
+    letter-spacing: 0.04em;
+}
+
+.sub-name_option-model {
+    position: relative;
+    top: -8px;
+    letter-spacing: -0.03em;
+}
+
+
 
 /*Поиск шин*/
 
