Home Work 6. Added search options for Find Po Avto

--- a/Practice/HW6/css/style.css
+++ b/Practice/HW6/css/style.css
@@ -231,11 +231,11 @@ body {
 }
 
 /*SEARCH*/
-.search {
+.search_wrapper {
     margin: 10px 4px;
 }
         /*базовый стиль для блоков поиска*/
-.find_box {
+.search_box {
     position: relative;
     border: 1px solid  rgb(156, 156, 157);
     box-shadow: 0px 5px 5px 0px rgba(150, 150, 150, 0.75);
@@ -243,7 +243,7 @@ body {
 }
 
         /*базовый стиль для навзаний блоков поиска*/
-.name {
+.search_box__name {
     position: absolute;
     font-family: "Arial Black";
     font-size: 12px;
@@ -251,7 +251,7 @@ body {
 }
 
         /*базовый стиль для ссылки "поиск"*/
-.search_txt {
+.search_link {
     position: absolute;
     bottom: 8px;
     right: 19px;
@@ -263,11 +263,26 @@ body {
     text-decoration: none;
     letter-spacing: 0.025em;
     height: 15px;
-
 }
 
+/*базовый стиль для названия выпадающего списка*/
+.search_options__name {
+    position: relative;
+    font-family: Arial, sans-serif;
+    font-size: 10px;
+}
+/*базовый стиль для подназвания выпадающего списка*/
+.search_options__subname {
+    font-family: Arial, sans-serif;
+    font-size: 10px;
+    color: #77858b;
+    letter-spacing: -0.07em;
+}
+
+
  /*Поис по автомобилю*/
-.findPoAvto {
+.search_box--po-avto {
+    position: relative;
     margin-top: 1px;
     float: left;
     width: 413px;
@@ -276,65 +291,49 @@ body {
     box-shadow: 0px 5px 5px 0px rgba(104, 104, 104, 0.75);
 }
 
-.name-findPoAvto {
+.search_box__name-po-avto {
     top: 1px;
     left: 125px;
     letter-spacing: 0.027em;
 }
 
-.findPoAvto_discs,
-.findPoAvto_tires {
+.search_box__name-po-avto--discs,
+.search_box__name-po-avto--tires {
+    position: absolute;
     font-size: 10px;
+    letter-spacing: 0.025em
 }
 
-.findPoAvto_discs {
-    position: absolute;
+.search_box__name-po-avto--discs {
     top: 4px;
     left: 20px;
-    letter-spacing: 0.025em
 }
 
-.findPoAvto_tires {
-    position: absolute;
+.search_box__name-po-avto--tires {
     top: 2px;
     right: 20px;
-    letter-spacing: 0.025em
 }
 
-
-.findPoAvto .search_options {
+.search_box__name-po-avto--discs + .search_options {
     position: absolute;
     top: 15px;
 }
 
-.name_option {
-    font-family: Arial, sans-serif;
-    font-size: 10px;
+.search_box__name-po-avto--tires + .search_options {
+    position: absolute;
+    top: 13px;
+    left: 205px;
 }
 
-.sub-name_option {
-    font-family: Arial, sans-serif;
-    font-size: 10px;
-    color: #77858b;
-    letter-spacing: -0.07em;
-}
-
-.name_option-marka {
-    letter-spacing: 0.03em;
-}
-
-.sub-name_option-marka {
-    letter-spacing: -0.07em;
-}
 
  /*параметры поиска Диски*/
-.discs{
+.search_options__list{
     margin-top: 5px;
     margin-left: 17px;
     width: 200px;
 }
 
-form dt {
+.search_options_item {
     float: left;
     clear: both;
     width: 66px;
@@ -343,7 +342,9 @@ form dt {
     position: relative;
     top: 1px;
 }
-form dd {
+
+
+.search_options_variant {
     margin-bottom: 1px;
 
 }
@@ -355,31 +356,55 @@ form dd select {
     box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, 0.75);
 }
 
-.option_model {
-    float: left;
-    clear: both;
-    width: 66px;
-    text-align: left;
-    margin-right: 10px;
-    position: relative;
-    top: -4px;
+.search_options__name--marka {
+    letter-spacing: 0.03em;
 }
 
-.name_option-model {
+.search_options__name--marka_subname {
+    letter-spacing: -0.07em;
+}
+
+
+.search_options__name--model {
+    top: -5px;
     letter-spacing: 0.04em;
 }
 
-.sub-name_option-model {
+.search_options__name--model_subname {
     position: relative;
-    top: -8px;
+    top: -13px;
     letter-spacing: -0.03em;
 }
 
+.search_options__name--year {
+    top: -15px;
+    letter-spacing: 0.04em;
+}
+.search_options__name--year_subname {
+    position: relative;
+    top: -23px;
+    letter-spacing: -0.03em;
+}
 
+.search_options_variant--year{
+    position: relative;
+    top: 2px;
+    width: 58px;
+}
+
+.search_options__name--komplect {
+    top: -21px;
+    letter-spacing: 0.03em;
+}
+
+.search_options_variant--komplect {
+    position: relative;
+    top: 3px;
+}
 
 /*Поиск шин*/
 
-.findTires {
+.search_box--tires {
     float: left;
     margin-left: 14px;
     width: 191px;
@@ -388,20 +413,20 @@ form dd select {
     letter-spacing: 0.026em;
 }
 
-.name-findTires {
+.search_box__name--tires {
     top: 3px;
     left: 9px;
     letter-spacing: -0.001em;
 }
 
-.search_txt-tires {
+.search_link-tires {
     bottom: 9px;
     right: 17px;
 }
 
 
 /*Поиск дисков*/
-.findDiscs{
+.search_box--discs{
     float: left;
     margin-left: 10px;
     width: 266px;
@@ -409,14 +434,14 @@ form dd select {
     border-radius: 16px;
 }
 
-.name-findDiscs {
+.search_box__name--discs {
     top: 2px;
     left: 8px;
     font-size: 13px;
     letter-spacing: 0.022em;
 }
 
-.search_txt-discs {
+.search_link-discs {
     bottom: 8px;
     right: 18px;
 }
