--- a/Practice/HW6/css/style.css
+++ b/Practice/HW6/css/style.css
@@ -160,7 +160,7 @@ body {
     text-decoration: none;
     text-align: center;
     font-size: 14px;
-    font-family: "Lucida Sans Unicode";
+    font-family: "Lucida Sans Unicode", Arial, sans-serif;
     line-height: 25px;
     color: #bfbfbf;
     letter-spacing: -0.02em;
@@ -278,11 +278,16 @@ body {
     color: #77858b;
     letter-spacing: -0.07em;
 }
-
-select {
+/*базовый стиль для выпадающего списка*/
+.search_options_variant_select  {
+    height: 17px;
+    width: 102px;
+    padding: 0;
+    box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, 0.75);
     background: url("../img/select_arrow.png") no-repeat right center;
     font-size: 11px;
 }
+
 
  /*Поис по автомобилю*/
 .search_box--po-avto {
@@ -329,10 +334,9 @@ select {
     left: 205px;
 }
 
-
  /*параметры поиска Диски*/
 .search_options__list{
-    margin-top: 5px;
+    margin-top: 4px;
     margin-left: 17px;
     width: 200px;
 }
@@ -349,15 +353,7 @@ select {
 
 
 .search_options_variant {
-    margin-bottom: 1px;
-
-}
-
-form dd select {
-    height: 17px;
-    width: 102px;
-    padding: 3px;
-    box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, 0.75);
+    margin-bottom: 2px;
 }
 
 .search_options__name--marka {
@@ -370,45 +366,51 @@ form dd select {
 
 
 .search_options__name--model {
-    top: -5px;
+    top: -3px;
     letter-spacing: 0.04em;
 }
 
 .search_options__name--model_subname {
     position: relative;
-    top: -13px;
+    top: -11px;
     letter-spacing: -0.03em;
 }
 
+.search_options_variant--model {
+    position: relative;
+    top: 3px;
+}
+
 .search_options__name--year {
-    top: -15px;
+    top: -13px;
     letter-spacing: 0.04em;
 }
 .search_options__name--year_subname {
     position: relative;
-    top: -23px;
+    top: -21px;
     letter-spacing: -0.03em;
 }
 
 .search_options_variant--year{
     position: relative;
-    top: 2px;
+    top: 5px;
     width: 58px;
 }
 
 .search_options__name--komplect {
-    top: -21px;
+    top: -19px;
     letter-spacing: 0.03em;
 }
 
 .search_options_variant--komplect {
     position: relative;
-    top: 3px;
+    top: 8px;
 }
 
 /*Поиск шин*/
 
 .search_box--tires {
+    position: relative;
     float: left;
     margin-left: 14px;
     width: 191px;
@@ -427,6 +429,100 @@ form dd select {
     bottom: 9px;
     right: 17px;
 }
+
+.search_box--tires .search_options {
+    margin-top: 16px;
+    margin-left: -4px;
+    width: 165px;
+}
+.search_options_item--tires {
+    float: left;
+    clear: both;
+    width: 36px;
+    text-align: left;
+    margin-right: 10px;
+    position: relative;
+    top: 1px;
+}
+
+.search_options_item--size {
+    /*margin-top: 21px;
+    margin-left: 19px;*/
+}
+
+.search_options__name--size {
+    top: 8px;
+    letter-spacing: 0.03em;
+}
+
+.search_options_variant--size {
+    width: 51px;
+    margin-top: 6px;
+}
+
+.search_options_variant--width {
+    width: 50px;
+}
+
+.search_options_variant--radius {
+    margin-top: 6px;
+    width: 45px;
+}
+.search_options__name--radius {
+    top: 6px;
+    left: 32px;
+    font-size: 11px;
+}
+
+.search_options__name--seazon {
+    top: -3px;
+}
+
+.search_options_variant__checkbox {
+    font-size: 13px;
+    letter-spacing: 0.025em;
+}
+
+.search_options_variant--summer {
+    position: absolute;
+    top: 68px;
+    left: 54px;
+    font-size: 12px;
+}
+
+.search_options_variant__checkbox--summer{
+    position: relative;
+    top: 1px;
+    left: 13px;
+}
+
+.search_options_variant--winter {
+    position: absolute;
+    top: 82px;
+    left: 54px;
+    font-size: 12px;
+}
+
+.search_options_variant__checkbox--winter{
+    position: relative;
+    top: 16px;
+    left: -18px;
+}
+
+.search_options_variant--vsesez {
+    position: absolute;
+    top: 96px;
+    left: 54px;
+
+}
+
+.search_options_variant__checkbox--vsesez{
+    position: relative;
+    top: 29px;
+    left: -49px;
+}
+
+
 
 
 /*Поиск дисков*/
